--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "dtxtut.doc.tar.xz": 3e3b9efb3d69a56703c1b8421edba5e4c7e79dc5
-  "dtxtut.tar.xz": ff08ecdfe88d740e2ab2658865e0d9779e4b1ea6
+  dtxtut.doc.tar.xz: 9b6490617e1d6e864fa15a4112e57184c8a1f329
+  dtxtut.tar.xz: dc4453de0ca220959375914cf9a88f8a42057463
