--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  dtxtut.doc.tar.xz: 9b6490617e1d6e864fa15a4112e57184c8a1f329
-  dtxtut.tar.xz: dc4453de0ca220959375914cf9a88f8a42057463
+  dtxtut.doc.r38375.tar.xz: 3638c2377b7cb631d016f5ca2cbf788c81d1bcb1
+  dtxtut.r38375.tar.xz: 43c0c8461da6cb7a5d45a922b7483981a39bc170
